feat: updates on backend by the parameters